tests/baselines/reference/dontShowCompilerGeneratedMembers.errors.txt
dontShowCompilerGeneratedMembers.ts(3,6): error TS1139: Type parameter declaration expected.
dontShowCompilerGeneratedMembers.ts(4,1): error TS1109: Expression expected.


==== dontShowCompilerGeneratedMembers.ts (2 errors) ====
    var f: {
        x: number;
        <-
         ~
!!! error TS1139: Type parameter declaration expected.
    };
    ~
!!! error TS1109: Expression expected.